# PeitchGIT

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/WORKFLOWS/: main_ci.yml
.github/issue_template/: bug_report.yml  feature_request.yml
.github/workflows/: Arch-Like_ci.yml  Arch-like_ci.yml  BuildInstaller.yml  Fedora-Like_ci.yml  Fedora-like_ci.yml  Mac-DarwinLike_ci.yml  Mac_ci.yml  Ubuntu-Like_ci.yml  Windows_ci.yml  build-arch.yml  build-fedora.yml  build-installer-windows.yml  build-installers.yml  build-macos.yml  build-phgit.yml  build-ubuntu.yml  build-windows-installer.yml  build-windows.yml  build.yml  git-sync.yml  install_managers.yml  installers.yml  main_ci.yml  managers.yml  pkg_managers.yml  policy-check.yml  preview-env.yml  release-installer.yml  release.yml  test-workflow.yml  test-workflow.yml#  win_ci.yml  windows_ci.yml  winstaller.yml
PeitchGUI/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
PeitchGUI/src/: App.tsx  index.html  main.ts  metadata.json  package.json  styles.css  tsconfig.json  types.ts
PeitchGUI/src-tauri/: Cargo.toml  tauri.conf.json
aur-gitph/: PKGBUILD
config/: clusters.yaml
docs/: StructureIndications  api_reference.md  architecture.md  introduction.md  user_guide.md
docs/api-reference/: core-api.md  lua-api.md
docs/developer-guide/: architecture.md  core-development.md  module-development.md
docs/user-guide/: getting-started.md  installation.md  lua-scripting.md
homebrew-tap/Formula /: gitph.rb
installer/: CMakeLists.txt  README.md  ThisFolderCurrentlyPlaceholderORTest  config.json
installer/helper_src/: CMakeLists.txt
installer/helper_src/src/: dependency_manager.cpp  dependency_manager.hpp  downloader.cpp  downloader.hpp  main.cpp  platform.hpp
installer/linux/: build_deb.sh  build_rpm.sh  uninstall.sh
installer/macos/: build_pkg.sh  install.sh  uninstall.sh
installer/nsis/: gitph_installer.nsi
installer/packaging/debian/: control
installer/packaging/nsis/: phgit.nsi
installer/packaging/rpm/: phgit.spec
installer/src/: download.c  installer_main.c  main.cpp
installer/src/dependencies/: dependency_manager.cpp  dependency_manager.hpp
installer/src/platform/: iplatform_installer.hpp  platform_detector.cpp  platform_detector.h
installer/src/platform/darwin-mac/: darwin-mac_installer.cpp  darwin-mac_installer.hpp
installer/src/platform/linux-systems/: linux_installer.cpp  linux_installer.hpp
installer/src/platform/windows/: windows_installer.cpp  windows_installer.hpp
installer/src/utils/: api_manager.cpp  api_manager.hpp  config_manager.cpp  config_manager.hpp  downloader.cpp  downloader.hpp  process_executor.cpp  process_executor.hpp  sha256.cpp  sha256.hpp
installer/windows/: EnvVarUpdate.nsh  installer.nsi
intellij-peitch/: build.gradle.kts  settings.gradle.kts
intellij-peitch/platform-integration/: build.gradle.kts
k8s/crd/: phgit.io_phgitpipelines.yaml  phgit.io_phgitpreviews.yaml  phgit.io_phgitreleases.yaml
k8s/hpa/: runner-hpa.yaml
k8s/operators/phgit_operator/: Cargo.toml
k8s/operators/phgit_operator/src/: crds.rs  main.rs
k8s/operators/phgit_operator/src/controllers/: mod.rs  pipeline_controller.rs  preview_controller.rs  release_controller.rs
k8s/policies/: disallow-latest-tag.rego  production-safeguards.rego
packaging/chocolatey/: gitph.nuspec  phgit.nuspec
packaging/debian/: changelog  postrm
packaging/nsis/: phgit.nsi
packaging/rpm/: gitph.spec  phgit.spec
packaging/snap/: snapcraft.yaml
runbooks/: auto-heal.sh
scripts/: build.bat  build.sh  check_deps.sh  release.sh  setup_dev_env.sh
shared/template/: phgit.nuspec.template
shared/templates/: chocolateyinstall.ps1-template  phgit.nuspec-template
src/modules/api_client/: Cargo.toml  client.go  github_handler.go  go.mod
src/modules/api_client/src/: github_handler.rs  lib.rs
src/modules/ci_cd_manager/parser/: Cargo.toml
src/modules/ci_cd_manager/parser/src/: lib.rs
src/modules/devops_automation/: Cargo.toml  go.mod  main.go  secret_manager.go
src/modules/devops_automation/src/: commands.rs  lib.rs  process_wrapper.rs
src/modules/git_ops/: Cargo.toml
src/modules/git_ops/src/: commands.rs  git_wrapper.rs  lib.rs
src/modules/git_sync/: Cargo.toml
src/modules/git_sync/src/: config.rs  git_ops.rs  kube_diff.rs  lib.rs
src/modules/issue_tracker/: Cargo.toml
src/modules/issue_tracker/src/: issue_service.rs  lib.rs
src/modules/k8s_local_dev/: Cargo.toml
src/modules/k8s_local_dev/src/: cli.rs  main.rs
src/modules/k8s_local_dev/src/provisioners/: common.rs  k3s.rs  kind.rs  mod.rs
src/modules/k8s_preview/: Cargo.toml
src/modules/k8s_preview/src/: actions.rs  config.rs  kube_client.rs  lib.rs
src/modules/multi_cluster_orchestrator/: Cargo.toml
src/modules/multi_cluster_orchestrator/src/: cluster_manager.rs  lib.rs
src/modules/policy_engine/: Cargo.toml
src/modules/policy_engine/src/: lib.rs
src/modules/release_orchestrator/: Cargo.toml
src/modules/release_orchestrator/src/: config.rs  lib.rs
src/modules/release_orchestrator/src/mesh/: istio.rs  linkerd.rs  mod.rs
src/modules/release_orchestrator/src/strategies/: blue_green.rs  canary.rs  mod.rs
src/modules/secret_manager/: Cargo.toml
src/modules/secret_manager/src/: lib.rs
src/modules/secret_manager/src/providers/: mod.rs  sealed_secrets.rs  sops.rs  vault.rs
src/modules/sync_engine/: Cargo.toml
src/modules/sync_engine/src/: lib.rs  sync.rs
src/phpkg/: Makefile  downloader.cpp  downloader.hpp  installer.c  installer.h  packages.c  packages.h  phpkg.c
src/plugins/: custom_aliases.lua  example.lua  (+1 more)
tests/: CMakeLists.txt  integration_test.sh  test_config_manager.c
vs-Peitch/: package.json  webpack.config.ts
vscode-Peitch/: .gitignore  README.md  index.html  jest.config.js  package-lock.json  package.json  prompts.md  tailwind.config.js  tsconfig.json
(+151 files in other folders)
